Fix event list header image overflow

--- a/app/assets/stylesheets/events.sass
+++ b/app/assets/stylesheets/events.sass
@@ -42,6 +42,7 @@
 
 .event-postcard_image, .event_list_image
   width: 100%
+  max-width: 100%
   height: 100%
   -moz-transition: all 0.3s
   -webkit-transition: all 0.3s
@@ -270,8 +271,8 @@
   height: 137px
 
 .event_list_main_header
-  flex-grow: 1
   width: 200px
+  max-width: 200px
   height: 137px
   overflow: hidden
   border-right: 1px solid $border-color
